--- a/simlpeFactoryDemo/simlpeFactoryDemo/StaticFactoryMethodDemo.csproj
+++ b/simlpeFactoryDemo/simlpeFactoryDemo/StaticFactoryMethodDemo.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report\ExcelReport.cs" />
+    <Compile Include="Report\otherReport.cs" />
     <Compile Include="Report\WordReport.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
